<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_margin"
            >

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/message_logo"
                android:src="@drawable/ic_baseline_loop_112"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/login_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_app_name"
                android:textSize="@dimen/header_one_font"
                app:layout_constraintTop_toBottomOf="@+id/login_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColor="@color/colorPrimary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/login_app_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_email_placeholder"
                    android:textColor="@color/colorPrimary"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/login_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_password_placeholder"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/action_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/action_remember_me"
                app:layout_constraintLeft_toLeftOf="@id/login_password"
                app:layout_constraintTop_toBottomOf="@id/login_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_forgot_password"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_go_to_reset_password"
                app:layout_constraintRight_toRightOf="@id/login_password"
                app:layout_constraintTop_toBottomOf="@id/login_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_login"
                app:cornerRadius="100dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_forgot_password" />

            <TextView
                android:id="@+id/login_not_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_not_registered"
                app:layout_constraintLeft_toLeftOf="@id/login_button"
                app:layout_constraintRight_toRightOf="@id/login_button"
                app:layout_constraintTop_toBottomOf="@id/login_button"
                android:textColor="@color/colorBlack"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_go_to_registration"
                app:layout_constraintLeft_toLeftOf="@id/login_button"
                app:layout_constraintRight_toRightOf="@id/login_button"
                app:layout_constraintTop_toBottomOf="@id/login_not_registered" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
