<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="ca.dal.bartertrader.utils.handler.resource.Status"/>

        <variable
            name="ViewModel"
            type="ca.dal.bartertrader.presentation.view_model.PasswordResetViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:theme="@style/AppTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/message_reset_password"
                app:layout_constraintBottom_toTopOf="@id/password_reset_email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_email_placeholder"
                    android:text="@={ViewModel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_password_send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:enabled="@{ViewModel.emailIsValid}"
                android:text="@string/action_sendEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_reset_email"
                android:onClick="@{() -> ViewModel.sendPasswordReset()}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_back_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/action_go_back"
                app:icon="@drawable/ic_baseline_navigate_before_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reset_password_send_button"
                android:onClick="@{() -> ViewModel.goToLogin()}"/>

            <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{ViewModel.passwordResetStatus == Status.PENDING ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
